k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-server
  template:
    metadata:
      labels:
        app: db-server
    spec:
      containers:
        - name: db-server
          image: nsharc4/db-server-optixchange:latest
          ports:
            - containerPort: 5000
