k8s/engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine-server
  template:
    metadata:
      labels:
        app: engine-server
    spec:
      containers:
        - name: engine-server
          image: nsharc4/engine-server-optixchange:latest
          ports:
            - containerPort: 3002
