k8s/express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-server
  template:
    metadata:
      labels:
        app: express-server
    spec:
      containers:
        - name: express-server
          image: nsharc4/express-server-optixchange:latest
          ports:
            - containerPort: 3000
