k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-server
spec:
  type: ClusterIP
  selector:
    app: db-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
