k8s/engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-server
spec:
  selector:
    app: engine-server
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
