k8s/mm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mm-server
spec:
  type: ClusterIP
  selector:
    app: mm-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
