k8s/ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-server
spec:
  selector:
    app: websocket-server
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
